doc: Inclusão das rotas do Cart no swagger
